@@ -1,7 +1,11 @@
+graft bower_components
 graft docs
+graft logo
 graft nikola
+graft snapcraft
 graft scripts
 graft tests
+graft translations
 include *.txt
 include *.rst
 include *.py
