@@ -1,3 +1,12 @@
+New in master
+=============
+
+Features
+--------
+
+Bugfixes
+--------
+
 New in v7.7.11
 ==============
 
